<resources>
    <string name="app_name">Kotlin 101</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="go_to_data_page">Go to Data Page</string>
    <string name="request_peru">Request Peru</string>
    <string name="go_back_to_home_page">Go Back To Home Page</string>
    <string name="request_france">Request France</string>
    <string name="welcome_to_our_n_geography_application">Welcome to our \n geography application!</string>
    <string name="data_page">Data Page</string>
    <string name="element_text" />
    <string name="item">Item</string>
    <string name="todo">TODO</string>
    <string name="country">Country</string>
    <string name="flag">flag</string>
    <string name="go_to">Go TO</string>
    <string name="country_name">Country Name</string>
    <string name="region">Region</string>
    <string name="textview">TextView</string>
    <string name="currency">Currency</string>
    <string name="capital">Capital</string>
    <string name="list_of_countries">List_of_countries :</string>
    <string name="geo_atlas">Geo Atlas</string>
    <string name="logo">logo</string>
    <string name="geoatlas">GeoAtlas</string>
    <string name="click_on_a_country_to_get_information_on_it">Click on a country to get information on it</string>
</resources>