<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="18dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        tools:ignore="UseCompoundDrawables"
        >

        <TextView
            android:id="@+id/textViewFlag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/flag"
            android:textColor="#292727"
            android:textSize="30sp"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="10sp"
            android:text="@string/country"
            android:textAlignment="textStart"
            android:textSize="22sp"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/textViewRegion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/region"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            android:paddingEnd="5px"
            tools:ignore="RtlCompat,RtlSymmetry" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
