<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    tools:ignore="ExtraText">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="345dp"
        android:layout_height="490dp"
        android:layout_marginTop="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="365dp"
        android:layout_height="99dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounder_corner_color_right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/logo"
                android:paddingStart="15sp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/geoatlas"
                android:textAlignment="textEnd"
                android:textColor="#3A3434"
                android:textSize="30sp"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/description"
        android:layout_width="359dp"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_corner_color_left"
        android:paddingStart="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp"
        android:text="@string/click_on_a_country_to_get_information_on_it"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>