<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="383dp"
            android:layout_height="89dp"
            android:background="@color/nicegreen"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/flagView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/flag"
                android:textColor="#000000"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="277dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/country_name"
                android:textColor="#000000"
                android:textSize="30sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/capital"
        android:layout_width="345dp"
        android:layout_height="51dp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/rounded_corner_color_left"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text="@string/capital"
        android:textAlignment="textStart"
        android:textColor="#454141"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/poulation"
        android:layout_width="349dp"
        android:layout_height="51dp"
        android:background="@drawable/rounded_corner_color_left"
        android:gravity="center"
        android:paddingStart="20sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text="Population"
        android:textAlignment="textStart"
        android:textColor="#454141"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/continent"
        android:layout_width="349dp"
        android:layout_height="51dp"

        android:background="@drawable/rounder_corner_color_right"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="20sp"
        android:paddingBottom="5sp"
        android:text="Continent"
        android:textAlignment="textEnd"
        android:textColor="#454141"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/currencyText"
        android:layout_width="349dp"
        android:layout_height="51dp"
        android:background="@drawable/rounder_corner_color_right"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingEnd="20dp"
        android:paddingBottom="5sp"
        android:text="@string/currency"
        android:textAlignment="textEnd"
        android:textColor="#454141"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/timezoneView"
        android:layout_width="341dp"
        android:layout_height="86dp"
        android:background="@drawable/rounded_corner_color_left"
        android:paddingStart="20sp"
        android:paddingTop="5sp"

        android:paddingBottom="5sp"
        android:scrollbars="vertical"
        android:text="Timezones"
        android:textAlignment="textStart"
        android:textColor="#454141"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <TextView
        android:id="@+id/languagesView"
        android:layout_width="341dp"
        android:layout_height="86dp"
        android:background="@drawable/rounder_corner_color_right"
        android:paddingTop="5sp"
        android:paddingEnd="20sp"
        android:paddingBottom="5sp"
        android:scrollbars="vertical"
        android:text="Languages"
        android:textAlignment="textEnd"
        android:textColor="#454141"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914" />

</androidx.constraintlayout.widget.ConstraintLayout>